--- a/608/index.html
+++ b/608/index.html
@@ -140,7 +140,7 @@
     </div>
 
     <script>
-        const API_KEY = "你的API_KEY"; // 替換為你的 Google Drive API Key
+        const API_KEY = "AIzaSyD3Q3lspfglPiRXPd1ksROciLdYLD84-y0"; // 替換為你的 Google Drive API Key
 
         function openAlbum(folderId) {
             // 隱藏原本的個人卡片區域
