--- a/608/index.html
+++ b/608/index.html
@@ -97,7 +97,7 @@
             border-radius: 10px;
         }
 
-        /* 返回按鈕（房子圖示） */
+        /* 返回按鈕（灰色房子圖示） */
         .back-button {
             position: absolute;
             top: 20px;
@@ -105,12 +105,29 @@
             background-color: transparent;
             border: none;
             font-size: 30px;
-            color: white;
+            color: gray;
             cursor: pointer;
             z-index: 10;
         }
 
         .back-button:hover {
+            color: #ddd;
+        }
+
+        /* 關閉按鈕（灰色叉叉） */
+        .close-button {
+            position: absolute;
+            top: 20px;
+            right: 20px;
+            background-color: transparent;
+            border: none;
+            font-size: 30px;
+            color: gray;
+            cursor: pointer;
+            z-index: 10;
+        }
+
+        .close-button:hover {
             color: #ddd;
         }
 
@@ -135,11 +152,12 @@
     <!-- 照片牆 -->
     <div id="photoGallery" class="gallery hidden"></div>
 
-    <!-- 返回按鈕（房子圖示） -->
+    <!-- 返回按鈕（灰色房子圖示） -->
     <button id="backButton" class="back-button" onclick="goBack()">🏠</button>
 
     <!-- 模態視窗（放大圖片） -->
     <div id="modal" class="modal" onclick="closeModal()">
+        <button class="close-button" onclick="closeModal()">×</button>
         <img id="modalImage">
     </div>
 
