--- a/608/index.html
+++ b/608/index.html
@@ -105,13 +105,13 @@
             background-color: transparent;
             border: none;
             font-size: 30px;
-            color: gray;
+            color: #888; /* 灰色 */
             cursor: pointer;
             z-index: 10;
         }
 
         .back-button:hover {
-            color: #ddd;
+            color: #bbb; /* 當滑鼠懸停時變亮 */
         }
 
         /* 關閉按鈕（灰色叉叉） */
