--- a/608/index.html
+++ b/608/index.html
@@ -139,7 +139,7 @@
 </head>
 <body>
 
-    <h1>畢業紀念冊</h1>
+    <h1>畢業紀念</h1>
 
     <div class="container" id="personContainer">
         <!-- 王大明的卡片 -->
