--- a/608/index.html
+++ b/608/index.html
@@ -139,7 +139,7 @@
 </head>
 <body>
 
-    <h1>畢業紀念</h1>
+    <h1>畢業紀念冊</h1>
 
     <div class="container" id="personContainer">
         <!-- 王大明的卡片 -->
@@ -153,7 +153,7 @@
     <div id="photoGallery" class="gallery hidden"></div>
 
     <!-- 返回按鈕（灰色房子圖示） -->
-    <button id="backButton" class="back-button" onclick="goBack()">🏠</button>
+    <button id="backButton" class="back-button" onclick="goBack()">&#x1F3E0;</button> <!-- 房子 SVG -->
 
     <!-- 模態視窗（放大圖片） -->
     <div id="modal" class="modal" onclick="closeModal()">
