--- a/608/index.html
+++ b/608/index.html
@@ -97,7 +97,7 @@
             border-radius: 10px;
         }
 
-        /* 返回按鈕（灰色房子圖示） */
+        /* 返回按鈕（灰色返回箭頭圖示） */
         .back-button {
             position: absolute;
             top: 20px;
@@ -157,10 +157,10 @@
     <!-- 照片牆 -->
     <div id="photoGallery" class="gallery hidden"></div>
 
-    <!-- 返回按鈕（灰色房子圖示） -->
+    <!-- 返回按鈕（灰色返回箭頭圖示） -->
     <button id="backButton" class="back-button" onclick="goBack()">
-        <!-- 灰色房子 SVG -->
-        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M12 3l9 8h-6v9H9v-9H3z"/></svg>
+        <!-- 灰色返回箭頭 SVG -->
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M14 7l-5 5 5 5V7z"/></svg>
     </button>
 
     <!-- 模態視窗（放大圖片） -->
