--- a/608/index.html
+++ b/608/index.html
@@ -1,84 +1,51 @@
 <!DOCTYPE html>
-<html lang="zh-TW">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>畢業紀念冊</title>
+    <title>個人照片區</title>
     <style>
-        /* 網頁背景 */
         body {
             font-family: Arial, sans-serif;
-            background-color: #f4f4f4;
-            text-align: center;
             margin: 0;
             padding: 0;
+            background-color: #f5f5f5;
         }
-
-        /* 主要容器 */
         .container {
             display: flex;
             flex-wrap: wrap;
             justify-content: center;
-            gap: 20px;
-            margin-top: 50px;
+            margin-top: 20px;
         }
-
-        /* 個人卡片 */
         .person-card {
-            width: 200px;
-            height: 250px;
-            background-color: white;
+            width: 250px;
+            margin: 20px;
+            padding: 10px;
+            background-color: #fff;
             border-radius: 10px;
-            box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.2);
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
             text-align: center;
-            padding-top: 20px;
             cursor: pointer;
-            transition: transform 0.2s;
+            transition: transform 0.3s;
         }
-
         .person-card:hover {
             transform: scale(1.05);
         }
-
-        /* 大頭貼（圓形） */
-        .avatar {
-            width: 80px;
-            height: 80px;
-            border-radius: 50%;
+        .person-card img {
+            width: 100px;
+            height: 100px;
             object-fit: cover;
-            margin-top: 20px;
+            border-radius: 50%;
+            margin-bottom: 10px;
         }
-
-        /* 座號與姓名 */
-        .info {
-            margin-top: 15px;
+        .person-card .name {
             font-size: 18px;
             font-weight: bold;
         }
-
-        /* 照片牆 */
-        .gallery {
-            display: flex;
-            flex-wrap: wrap;
-            justify-content: center;
-            gap: 10px;
-            margin-top: 20px;
+        .person-card .number {
+            font-size: 16px;
+            color: #555;
         }
-
-        .gallery img {
-            width: 150px;
-            height: 150px;
-            object-fit: cover;
-            cursor: pointer;
-            border-radius: 8px;
-            transition: transform 0.2s;
-        }
-
-        .gallery img:hover {
-            transform: scale(1.1);
-        }
-
-        /* 模態視窗（放大圖片） */
         .modal {
             display: none;
             position: fixed;
@@ -89,153 +56,87 @@
             background-color: rgba(0, 0, 0, 0.8);
             justify-content: center;
             align-items: center;
+            z-index: 1000;
         }
-
-        .modal img {
+        .modal-content {
+            position: relative;
             max-width: 90%;
             max-height: 90%;
+        }
+        .modal-content img {
+            width: 100%;
+            height: auto;
             border-radius: 10px;
         }
-
-        /* 返回按鈕（向左箭頭圖示） */
+        .close-btn {
+            position: absolute;
+            top: 10px;
+            right: 10px;
+            font-size: 36px;
+            color: #888;
+            cursor: pointer;
+            background: none;
+            border: none;
+        }
         .back-button {
             position: absolute;
             top: 20px;
             left: 20px;
-            background-color: transparent;
+            background: none;
             border: none;
             cursor: pointer;
-            z-index: 10;
+            font-size: 30px;
+            color: #888;
         }
-
-        /* 向左箭頭的 SVG */
         .back-button svg {
-            fill: #888; /* 灰色 */
-            width: 40px;
-            height: 40px;
-        }
-
-        .back-button:hover svg {
-            fill: #bbb; /* 當滑鼠懸停時變亮 */
-        }
-
-        /* 關閉按鈕（灰色叉叉） */
-        .close-button {
-            position: absolute;
-            top: 20px;
-            right: 20px;
-            background-color: transparent;
-            border: none;
-            cursor: pointer;
-            z-index: 10;
-            font-size: 50px; /* 讓叉叉變大 */
-            color: gray; /* 灰色 */
-        }
-
-        .close-button:hover {
-            color: #bbb;
-        }
-
-        /* 隱藏照片牆 */
-        .hidden {
-            display: none;
+            width: 30px;
+            height: 30px;
         }
     </style>
 </head>
 <body>
 
-    <h1>畢業紀念冊</h1>
+<!-- 返回按鈕 -->
+<button id="backButton" class="back-button" onclick="goBack()">
+    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+        <path d="M19 12H5m7-7l-7 7 7 7" stroke="#888" stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round"/>
+    </svg>
+</button>
 
-    <div class="container" id="personContainer">
-        <!-- 王大明的卡片 -->
-        <div class="person-card" onclick="openAlbum('1ljcfzuHufDKM4PcnhENRbbW86q8WQOhA')">
-            <img class="avatar" src="https://drive.google.com/thumbnail?id=1i2tsdJEqIyQfIX7uT55qYD5fPNydmic1&sz=w200" alt="王大明">
-            <div class="info">39 王大明</div>
-        </div>
+<!-- 這是人物資料顯示區 -->
+<div class="container">
+    <div class="person-card" onclick="openGallery('王大明', '39', 'https://drive.google.com/uc?id=1i2tsdJEqIyQfIX7uT55qYD5fPNydmic1')">
+        <img src="https://drive.google.com/uc?id=1i2tsdJEqIyQfIX7uT55qYD5fPNydmic1" alt="王大明的照片">
+        <div class="name">王大明</div>
+        <div class="number">39號</div>
     </div>
+</div>
 
-    <!-- 照片牆 -->
-    <div id="photoGallery" class="gallery hidden"></div>
-
-    <!-- 返回按鈕（向左箭頭圖示） -->
-    <button id="backButton" class="back-button" onclick="goBack()">
-        <!-- 向左箭頭的 SVG -->
-        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M15 19l-7-7 7-7v14z"/></svg>
-    </button>
-
-    <!-- 模態視窗（放大圖片） -->
-    <div id="modal" class="modal" onclick="closeModal()">
-        <button class="close-button" onclick="closeModal()">×</button>
-        <img id="modalImage">
+<!-- 放大照片的 Modal -->
+<div id="myModal" class="modal">
+    <div class="modal-content">
+        <button class="close-btn" onclick="closeModal()">&times;</button>
+        <img id="modalImage" src="" alt="放大照片">
     </div>
+</div>
 
-    <script>
-        const API_KEY = "AIzaSyD3Q3lspfglPiRXPd1ksROciLdYLD84-y0"; // 你的 API Key
+<script>
+    // 開啟相簿
+    function openGallery(name, number, imageSrc) {
+        document.getElementById("myModal").style.display = "flex";
+        document.getElementById("modalImage").src = imageSrc; // 顯示大圖
+    }
 
-        function openAlbum(folderId) {
-            // 隱藏原本的個人卡片區域
-            document.getElementById("personContainer").classList.add("hidden");
-            // 顯示照片牆和返回按鈕
-            document.getElementById("photoGallery").classList.remove("hidden");
-            document.getElementById("backButton").classList.remove("hidden");
+    // 關閉 Modal
+    function closeModal() {
+        document.getElementById("myModal").style.display = "none";
+    }
 
-            const API_URL = `https://www.googleapis.com/drive/v3/files?q=%27${folderId}%27+in+parents+and+mimeType+contains+%27image%27&key=${API_KEY}&fields=files(id,name)`;
-
-            fetch(API_URL)
-                .then(response => {
-                    if (!response.ok) {
-                        throw new Error(`HTTP error! Status: ${response.status}`);
-                    }
-                    return response.json();
-                })
-                .then(data => {
-                    const gallery = document.getElementById("photoGallery");
-                    gallery.innerHTML = ""; // 清空舊圖片
-
-                    if (!data.files || data.files.length === 0) {
-                        gallery.innerHTML = "<p>這個相簿沒有照片。</p>";
-                        return;
-                    }
-
-                    data.files.forEach((file) => {
-                        const imgElement = document.createElement("img");
-                        const fileId = file.id;
-
-                        imgElement.src = `https://drive.google.com/thumbnail?id=${fileId}&sz=w300`;
-                        imgElement.alt = file.name;
-                        imgElement.onclick = function () {
-                            openModal(fileId);
-                        };
-
-                        gallery.appendChild(imgElement);
-                    });
-                })
-                .catch(error => {
-                    console.error("錯誤:", error);
-                    document.getElementById("photoGallery").innerHTML = "<p>載入圖片時發生錯誤。</p>";
-                });
-        }
-
-        function openModal(id) {
-            const modal = document.getElementById("modal");
-            const modalImage = document.getElementById("modalImage");
-
-            modal.style.display = "flex";
-            modalImage.src = `https://drive.google.com/thumbnail?id=${id}&sz=w1000`; // 顯示較大解析度
-        }
-
-        function closeModal() {
-            document.getElementById("modal").style.display = "none";
-        }
-
-        function goBack() {
-            // 顯示個人卡片區域
-            document.getElementById("personContainer").classList.remove("hidden");
-            // 隱藏照片牆與返回按鈕
-            document.getElementById("photoGallery").classList.add("hidden");
-            document.getElementById("backButton").classList.add("hidden");
-        }
-    </script>
+    // 返回按鈕功能
+    function goBack() {
+        window.history.back();
+    }
+</script>
 
 </body>
 </html>
