--- a/608/index.html
+++ b/608/index.html
@@ -1,51 +1,79 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh-TW">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>個人照片區</title>
+    <title>畢業紀念網站</title>
     <style>
         body {
             font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
+            text-align: center;
             background-color: #f5f5f5;
+            margin: 0;
         }
+        
         .container {
             display: flex;
             flex-wrap: wrap;
             justify-content: center;
-            margin-top: 20px;
+            gap: 20px;
+            padding: 20px;
         }
-        .person-card {
-            width: 250px;
-            margin: 20px;
-            padding: 10px;
-            background-color: #fff;
+
+        .profile-card {
+            width: 200px;
+            height: 250px;
+            background-color: white;
             border-radius: 10px;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-            text-align: center;
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
             cursor: pointer;
-            transition: transform 0.3s;
+            transition: transform 0.2s;
         }
-        .person-card:hover {
+
+        .profile-card:hover {
             transform: scale(1.05);
         }
-        .person-card img {
+
+        .profile-image {
             width: 100px;
             height: 100px;
-            object-fit: cover;
             border-radius: 50%;
-            margin-bottom: 10px;
+            object-fit: cover;
         }
-        .person-card .name {
+
+        .profile-name {
+            margin-top: 10px;
             font-size: 18px;
             font-weight: bold;
         }
-        .person-card .number {
+
+        .profile-id {
             font-size: 16px;
-            color: #555;
+            color: gray;
         }
+
+        /* 個人照片區 */
+        .photo-gallery {
+            display: none;
+            flex-wrap: wrap;
+            justify-content: center;
+            gap: 10px;
+            padding: 20px;
+        }
+
+        .photo-gallery img {
+            width: 150px;
+            height: 150px;
+            object-fit: cover;
+            border-radius: 8px;
+            cursor: pointer;
+        }
+
+        /* 放大圖片的模態視窗 */
         .modal {
             display: none;
             position: fixed;
@@ -53,90 +81,136 @@
             left: 0;
             width: 100%;
             height: 100%;
-            background-color: rgba(0, 0, 0, 0.8);
+            background: rgba(0, 0, 0, 0.8);
             justify-content: center;
             align-items: center;
-            z-index: 1000;
         }
-        .modal-content {
-            position: relative;
+
+        .modal img {
             max-width: 90%;
-            max-height: 90%;
+            max-height: 80%;
         }
-        .modal-content img {
-            width: 100%;
-            height: auto;
-            border-radius: 10px;
-        }
-        .close-btn {
-            position: absolute;
-            top: 10px;
-            right: 10px;
-            font-size: 36px;
-            color: #888;
-            cursor: pointer;
-            background: none;
-            border: none;
-        }
+
+        /* 返回箭頭按鈕 */
         .back-button {
             position: absolute;
-            top: 20px;
-            left: 20px;
+            top: 15px;
+            left: 15px;
             background: none;
             border: none;
             cursor: pointer;
-            font-size: 30px;
-            color: #888;
         }
+
         .back-button svg {
             width: 30px;
             height: 30px;
+            stroke: #888;
+            transition: stroke 0.2s;
+        }
+
+        .back-button:hover svg {
+            stroke: black;
+        }
+
+        /* 關閉按鈕 */
+        .close-button {
+            position: absolute;
+            top: 10px;
+            right: 10px;
+            background: none;
+            border: none;
+            cursor: pointer;
+        }
+
+        .close-button svg {
+            width: 40px;
+            height: 40px;
+            stroke: gray;
+            transition: stroke 0.2s;
+        }
+
+        .close-button:hover svg {
+            stroke: black;
         }
     </style>
 </head>
 <body>
 
-<!-- 返回按鈕 -->
-<button id="backButton" class="back-button" onclick="goBack()">
-    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
-        <path d="M19 12H5m7-7l-7 7 7 7" stroke="#888" stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round"/>
-    </svg>
-</button>
-
-<!-- 這是人物資料顯示區 -->
-<div class="container">
-    <div class="person-card" onclick="openGallery('王大明', '39', 'https://drive.google.com/uc?id=1i2tsdJEqIyQfIX7uT55qYD5fPNydmic1')">
-        <img src="https://drive.google.com/uc?id=1i2tsdJEqIyQfIX7uT55qYD5fPNydmic1" alt="王大明的照片">
-        <div class="name">王大明</div>
-        <div class="number">39號</div>
+    <!-- 個人頁面 -->
+    <div id="mainPage" class="container">
+        <div class="profile-card" onclick="openProfile('王大明', '39', '1i2tsdJEqIyQfIX7uT55qYD5fPNydmic1', '1ljcfzuHufDKM4PcnhENRbbW86q8WQOhA')">
+            <img class="profile-image" src="https://drive.google.com/thumbnail?id=1i2tsdJEqIyQfIX7uT55qYD5fPNydmic1&sz=w200" alt="王大明">
+            <div class="profile-name">王大明</div>
+            <div class="profile-id">39號</div>
+        </div>
     </div>
-</div>
 
-<!-- 放大照片的 Modal -->
-<div id="myModal" class="modal">
-    <div class="modal-content">
-        <button class="close-btn" onclick="closeModal()">&times;</button>
-        <img id="modalImage" src="" alt="放大照片">
+    <!-- 個人照片區 -->
+    <div id="photoPage" class="photo-gallery">
+        <button id="backButton" class="back-button" onclick="goBack()">
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+                <path d="M19 12H5m7-7l-7 7 7 7" stroke="#888" stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round"/>
+            </svg>
+        </button>
+        <div id="photoGallery"></div>
     </div>
-</div>
 
-<script>
-    // 開啟相簿
-    function openGallery(name, number, imageSrc) {
-        document.getElementById("myModal").style.display = "flex";
-        document.getElementById("modalImage").src = imageSrc; // 顯示大圖
-    }
+    <!-- 放大圖片的模態視窗 -->
+    <div id="modal" class="modal">
+        <button class="close-button" onclick="closeModal()">
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+                <path d="M6 6L18 18M6 18L18 6" stroke="gray" stroke-width="3" fill="none" stroke-linecap="round" stroke-linejoin="round"/>
+            </svg>
+        </button>
+        <img id="modalImage">
+    </div>
 
-    // 關閉 Modal
-    function closeModal() {
-        document.getElementById("myModal").style.display = "none";
-    }
+    <script>
+        const API_KEY = "YOUR_API_KEY"; 
+        function openProfile(name, id, profileImgId, folderId) {
+            document.getElementById("mainPage").style.display = "none";
+            document.getElementById("photoPage").style.display = "flex";
+            loadImages(folderId);
+        }
 
-    // 返回按鈕功能
-    function goBack() {
-        window.history.back();
-    }
-</script>
+        function goBack() {
+            document.getElementById("photoPage").style.display = "none";
+            document.getElementById("mainPage").style.display = "flex";
+        }
 
+        function openModal(imgSrc) {
+            document.getElementById("modal").style.display = "flex";
+            document.getElementById("modalImage").src = imgSrc;
+        }
+
+        function closeModal() {
+            document.getElementById("modal").style.display = "none";
+        }
+
+        async function loadImages(folderId) {
+            const API_URL = `https://www.googleapis.com/drive/v3/files?q=%27${folderId}%27+in+parents+and+mimeType+contains+%27image%27&key=${API_KEY}&fields=files(id,name)`;
+            try {
+                const response = await fetch(API_URL);
+                const data = await response.json();
+                const gallery = document.getElementById("photoGallery");
+                gallery.innerHTML = "";
+
+                if (!data.files || data.files.length === 0) {
+                    gallery.innerHTML = "<p>此人沒有上傳照片</p>";
+                    return;
+                }
+
+                data.files.forEach((file) => {
+                    const img = document.createElement("img");
+                    img.src = `https://drive.google.com/thumbnail?id=${file.id}&sz=w200`;
+                    img.alt = file.name;
+                    img.onclick = () => openModal(`https://drive.google.com/thumbnail?id=${file.id}&sz=w1000`);
+                    gallery.appendChild(img);
+                });
+            } catch (error) {
+                console.error("錯誤:", error);
+            }
+        }
+    </script>
 </body>
 </html>
