--- a/608/index.html
+++ b/608/index.html
@@ -3,77 +3,92 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>畢業紀念網站</title>
+    <title>畢業紀念冊</title>
     <style>
+        /* 基本樣式設定 */
         body {
             font-family: Arial, sans-serif;
-            text-align: center;
-            background-color: #f5f5f5;
             margin: 0;
-        }
-        
-        .container {
-            display: flex;
-            flex-wrap: wrap;
-            justify-content: center;
-            gap: 20px;
-            padding: 20px;
+            padding: 0;
+            background-color: #f0f0f0;
         }
 
-        .profile-card {
-            width: 200px;
-            height: 250px;
+        /* 個人資料框 */
+        .profile-box {
+            width: 300px;
+            height: 400px;
+            margin: 20px;
             background-color: white;
-            border-radius: 10px;
-            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: center;
+            border-radius: 8px;
+            box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
+            overflow: hidden;
             cursor: pointer;
-            transition: transform 0.2s;
+            display: inline-block;
         }
 
-        .profile-card:hover {
-            transform: scale(1.05);
-        }
-
-        .profile-image {
-            width: 100px;
-            height: 100px;
-            border-radius: 50%;
+        .profile-box img {
+            width: 100%;
+            height: 66%;
             object-fit: cover;
+            border-bottom: 2px solid #ddd;
         }
 
-        .profile-name {
-            margin-top: 10px;
+        .profile-box .name {
+            padding: 10px;
+            text-align: center;
             font-size: 18px;
-            font-weight: bold;
         }
 
-        .profile-id {
+        .profile-box .id {
+            text-align: center;
             font-size: 16px;
             color: gray;
         }
 
-        /* 個人照片區 */
-        .photo-gallery {
-            display: none;
+        /* 返回箭頭樣式 */
+        .back-button {
+            position: fixed;
+            top: 15px;
+            left: 15px;
+            width: 50px;
+            height: 50px;
+            background-color: rgba(0, 0, 0, 0.6);
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            border-radius: 50%;
+            cursor: pointer;
+            transition: background-color 0.2s;
+            z-index: 10;
+        }
+
+        .back-button:hover {
+            background-color: rgba(0, 0, 0, 0.8);
+        }
+
+        /* 照片顯示區域 */
+        #gallery {
+            display: flex;
             flex-wrap: wrap;
             justify-content: center;
-            gap: 10px;
             padding: 20px;
         }
 
-        .photo-gallery img {
+        .gallery img {
             width: 150px;
             height: 150px;
             object-fit: cover;
-            border-radius: 8px;
             cursor: pointer;
+            border-radius: 8px;
+            margin: 10px;
+            transition: transform 0.2s;
         }
 
-        /* 放大圖片的模態視窗 */
+        .gallery img:hover {
+            transform: scale(1.1);
+        }
+
+        /* Modal背景 */
         .modal {
             display: none;
             position: fixed;
@@ -81,136 +96,121 @@
             left: 0;
             width: 100%;
             height: 100%;
-            background: rgba(0, 0, 0, 0.8);
+            background-color: rgba(0, 0, 0, 0.8);
             justify-content: center;
             align-items: center;
+            z-index: 100;
+        }
+
+        .modal-content {
+            position: relative;
+            max-width: 80%;
+            max-height: 80%;
+            overflow: hidden;
         }
 
         .modal img {
-            max-width: 90%;
-            max-height: 80%;
+            width: 100%;
+            height: auto;
         }
 
-        /* 返回箭頭按鈕 */
-        .back-button {
-            position: absolute;
-            top: 15px;
-            left: 15px;
-            background: none;
-            border: none;
-            cursor: pointer;
-        }
-
-        .back-button svg {
-            width: 30px;
-            height: 30px;
-            stroke: #888;
-            transition: stroke 0.2s;
-        }
-
-        .back-button:hover svg {
-            stroke: black;
-        }
-
-        /* 關閉按鈕 */
-        .close-button {
+        .modal .close {
             position: absolute;
             top: 10px;
             right: 10px;
-            background: none;
-            border: none;
+            font-size: 30px;
+            color: white;
             cursor: pointer;
-        }
-
-        .close-button svg {
-            width: 40px;
-            height: 40px;
-            stroke: gray;
-            transition: stroke 0.2s;
-        }
-
-        .close-button:hover svg {
-            stroke: black;
         }
     </style>
 </head>
 <body>
+    <!-- 返回箭頭 -->
+    <div id="backButton" class="back-button hidden" onclick="goBack()">
+        <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" viewBox="0 0 24 24" fill="white">
+            <path d="M15.54 3.54a1.5 1.5 0 0 1 0 2.12L9.21 12l6.33 6.33a1.5 1.5 0 0 1-2.12 2.12l-7.5-7.5a1.5 1.5 0 0 1 0-2.12l7.5-7.5a1.5 1.5 0 0 1 2.12 0z"/>
+        </svg>
+    </div>
 
-    <!-- 個人頁面 -->
-    <div id="mainPage" class="container">
-        <div class="profile-card" onclick="openProfile('王大明', '39', '1i2tsdJEqIyQfIX7uT55qYD5fPNydmic1', '1ljcfzuHufDKM4PcnhENRbbW86q8WQOhA')">
-            <img class="profile-image" src="https://drive.google.com/thumbnail?id=1i2tsdJEqIyQfIX7uT55qYD5fPNydmic1&sz=w200" alt="王大明">
-            <div class="profile-name">王大明</div>
-            <div class="profile-id">39號</div>
+    <!-- Modal顯示區域 -->
+    <div id="modal" class="modal">
+        <div class="modal-content">
+            <span class="close" onclick="closeModal()">&times;</span>
+            <img id="modalImage" src="" alt="Full Image">
         </div>
     </div>
 
-    <!-- 個人照片區 -->
-    <div id="photoPage" class="photo-gallery">
-        <button id="backButton" class="back-button" onclick="goBack()">
-            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
-                <path d="M19 12H5m7-7l-7 7 7 7" stroke="#888" stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round"/>
-            </svg>
-        </button>
-        <div id="photoGallery"></div>
+    <!-- 顯示王大明的資料頁面 -->
+    <div id="profilePage">
+        <div class="profile-box" onclick="showGallery('1ljcfzuHufDKM4PcnhENRbbW86q8WQOhA')">
+            <img src="https://drive.google.com/uc?id=1i2tsdJEqIyQfIX7uT55qYD5fPNydmic1" alt="大頭貼">
+            <div class="name">王大明</div>
+            <div class="id">39號</div>
+        </div>
     </div>
 
-    <!-- 放大圖片的模態視窗 -->
-    <div id="modal" class="modal">
-        <button class="close-button" onclick="closeModal()">
-            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
-                <path d="M6 6L18 18M6 18L18 6" stroke="gray" stroke-width="3" fill="none" stroke-linecap="round" stroke-linejoin="round"/>
-            </svg>
-        </button>
-        <img id="modalImage">
-    </div>
+    <!-- 顯示照片 -->
+    <div id="gallery"></div>
 
     <script>
-        const API_KEY = "YOUR_API_KEY"; 
-        function openProfile(name, id, profileImgId, folderId) {
-            document.getElementById("mainPage").style.display = "none";
-            document.getElementById("photoPage").style.display = "flex";
-            loadImages(folderId);
-        }
+        const API_KEY = "AIzaSyD3Q3lspfglPiRXPd1ksROciLdYLD84-y0"; // 替換成你自己的API金鑰
+        const FOLDER_ID = "1ljcfzuHufDKM4PcnhENRbbW86q8WQOhA"; // 王大明的資料夾ID
 
-        function goBack() {
-            document.getElementById("photoPage").style.display = "none";
-            document.getElementById("mainPage").style.display = "flex";
-        }
+        // 顯示圖片的Modal
+        const modal = document.getElementById("modal");
+        const modalImage = document.getElementById("modalImage");
+        const backButton = document.getElementById("backButton");
+        const gallery = document.getElementById("gallery");
 
-        function openModal(imgSrc) {
-            document.getElementById("modal").style.display = "flex";
-            document.getElementById("modalImage").src = imgSrc;
-        }
+        // 顯示王大明資料夾內的所有照片
+        async function loadImages() {
+            const API_URL = `https://www.googleapis.com/drive/v3/files?q='%27${FOLDER_ID}%27+in+parents+and+mimeType+contains+%27image%27&key=${API_KEY}&fields=files(id,name)`;
 
-        function closeModal() {
-            document.getElementById("modal").style.display = "none";
-        }
-
-        async function loadImages(folderId) {
-            const API_URL = `https://www.googleapis.com/drive/v3/files?q=%27${folderId}%27+in+parents+and+mimeType+contains+%27image%27&key=${API_KEY}&fields=files(id,name)`;
             try {
                 const response = await fetch(API_URL);
                 const data = await response.json();
-                const gallery = document.getElementById("photoGallery");
-                gallery.innerHTML = "";
 
-                if (!data.files || data.files.length === 0) {
-                    gallery.innerHTML = "<p>此人沒有上傳照片</p>";
-                    return;
-                }
+                gallery.innerHTML = ""; // 清除現有圖片
 
-                data.files.forEach((file) => {
-                    const img = document.createElement("img");
-                    img.src = `https://drive.google.com/thumbnail?id=${file.id}&sz=w200`;
-                    img.alt = file.name;
-                    img.onclick = () => openModal(`https://drive.google.com/thumbnail?id=${file.id}&sz=w1000`);
-                    gallery.appendChild(img);
+                data.files.forEach(file => {
+                    const imgElement = document.createElement('img');
+                    const fileId = file.id;
+                    imgElement.src = `https://drive.google.com/thumbnail?id=${fileId}&sz=w1000`; // 使用縮圖URL並放大
+                    imgElement.alt = file.name;
+                    imgElement.onclick = function() {
+                        modal.style.display = "flex";
+                        modalImage.src = `https://drive.google.com/uc?id=${fileId}`; // 顯示完整圖片
+                    };
+                    gallery.appendChild(imgElement);
                 });
             } catch (error) {
-                console.error("錯誤:", error);
+                console.error("Error loading images:", error);
             }
         }
+
+        // 點擊返回箭頭，回到王大明的資料頁
+        function goBack() {
+            document.getElementById("profilePage").style.display = "block";
+            document.getElementById("gallery").style.display = "none";
+            backButton.classList.add("hidden");
+        }
+
+        // 顯示圖片集合
+        function showGallery(folderId) {
+            document.getElementById("profilePage").style.display = "none";
+            document.getElementById("gallery").style.display = "block";
+            backButton.classList.remove("hidden");
+            loadImages(); // 加載資料夾內的所有圖片
+        }
+
+        // 關閉Modal
+        function closeModal() {
+            modal.style.display = "none";
+        }
+
+        // 初始化
+        document.getElementById("profilePage").style.display = "block";
+        document.getElementById("gallery").style.display = "none";
     </script>
 </body>
 </html>
