--- a/608/index.html
+++ b/608/index.html
@@ -95,22 +95,25 @@
             border-radius: 10px;
         }
 
-        /* 返回按鈕 */
+        /* 返回按鈕（箭頭圖示） */
         .back-button {
             margin-top: 20px;
-            padding: 10px 20px;
-            background-color: #007BFF;
-            color: white;
+            padding: 10px;
+            background: none;
             border: none;
-            border-radius: 5px;
             cursor: pointer;
         }
 
-        .back-button:hover {
-            background-color: #0056b3;
+        .back-button img {
+            width: 40px; /* 調整箭頭大小 */
+            transition: transform 0.2s;
         }
 
-        /* 隱藏照片牆 */
+        .back-button:hover img {
+            transform: scale(1.1);
+        }
+
+        /* 隱藏元素 */
         .hidden {
             display: none;
         }
@@ -131,8 +134,10 @@
     <!-- 照片牆 -->
     <div id="photoGallery" class="gallery hidden"></div>
 
-    <!-- 返回按鈕 -->
-    <button id="backButton" class="back-button hidden" onclick="goBack()">返回</button>
+    <!-- 返回按鈕（箭頭圖示） -->
+    <button id="backButton" class="back-button hidden" onclick="goBack()">
+        <img src="https://cdn-icons-png.flaticon.com/512/271/271220.png" alt="返回">
+    </button>
 
     <!-- 模態視窗（放大圖片） -->
     <div id="modal" class="modal" onclick="closeModal()">
@@ -143,7 +148,7 @@
         const API_KEY = "AIzaSyD3Q3lspfglPiRXPd1ksROciLdYLD84-y0"; // 你的 API Key
 
         function openAlbum(folderId) {
-            // 隱藏原本的個人卡片區域
+            // 隱藏個人卡片區域
             document.getElementById("personContainer").classList.add("hidden");
             // 顯示照片牆和返回按鈕
             document.getElementById("photoGallery").classList.remove("hidden");
