--- a/608/index.html
+++ b/608/index.html
@@ -117,6 +117,29 @@
             transform: scale(1.1);
         }
 
+        /* 關閉按鈕（叉叉圖示） */
+        .close-button {
+            position: absolute;
+            top: 10px;
+            right: 10px;
+            padding: 10px;
+            background-color: rgba(0, 0, 0, 0.3); /* 灰色背景 */
+            border-radius: 50%;
+            cursor: pointer;
+            z-index: 101;
+        }
+
+        .close-button svg {
+            width: 40px;
+            height: 40px;
+            fill: white;
+            transition: transform 0.2s;
+        }
+
+        .close-button:hover svg {
+            transform: scale(1.1);
+        }
+
         /* 隱藏元素 */
         .hidden {
             display: none;
@@ -142,6 +165,13 @@
     <div id="backButton" class="back-button hidden" onclick="goBack()">
         <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" viewBox="0 0 24 24" fill="white">
             <path d="M15.54 3.54a1.5 1.5 0 0 1 0 2.12L9.21 12l6.33 6.33a1.5 1.5 0 0 1-2.12 2.12l-7.5-7.5a1.5 1.5 0 0 1 0-2.12l7.5-7.5a1.5 1.5 0 0 1 2.12 0z"/>
+        </svg>
+    </div>
+
+    <!-- 關閉按鈕（叉叉圖示） -->
+    <div id="closeButton" class="close-button hidden" onclick="closeModal()">
+        <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" viewBox="0 0 24 24" fill="white">
+            <path d="M18.36 5.64a1.5 1.5 0 0 0-2.12 0L12 9.88 7.76 5.64a1.5 1.5 0 0 0-2.12 2.12L9.88 12 5.64 16.24a1.5 1.5 0 0 0 2.12 2.12L12 14.12l4.24 4.24a1.5 1.5 0 0 0 2.12-2.12L14.12 12l4.24-4.24a1.5 1.5 0 0 0 0-2.12z"/>
         </svg>
     </div>
 
@@ -203,10 +233,12 @@
 
             modal.style.display = "flex";
             modalImage.src = `https://drive.google.com/thumbnail?id=${id}&sz=w1000`; // 顯示較大解析度
+            document.getElementById("closeButton").classList.remove("hidden");
         }
 
         function closeModal() {
             document.getElementById("modal").style.display = "none";
+            document.getElementById("closeButton").classList.add("hidden");
         }
 
         function goBack() {
