--- a/608/index.html
+++ b/608/index.html
@@ -41,15 +41,15 @@
 
         /* 大頭貼（圓形，修改圓心位置） */
         .avatar {
-            width: 150px;
-            height: 150px;
+            width: 150px;  /* 大小可以根據需求修改 */
+            height: 150px; /* 大小可以根據需求修改 */
             border-radius: 50%;
             object-fit: cover;
             position: absolute;
-            top: 66%; /* 圓心移至卡片的1/3位置 */
+            top: 83px; /* 讓圓心位於卡片框的1/3 */
             left: 50%;
             transform: translateX(-50%);
-        }
+}
 
         /* 座號與姓名（同一行，位於卡片下方1/3的位置） */
         .info {
