--- a/608/index.html
+++ b/608/index.html
@@ -53,10 +53,15 @@
 
         /* 座號與姓名 */
         .info {
-            margin-top: 15px;
-            font-size: 18px;
+            position: absolute;
+            bottom: 25px;
+            left: 50%;
+            transform: translateX(-50%);
+            font-size: 25px;
             font-weight: bold;
+            white-space: nowrap;
         }
+
 
         /* 照片牆 */
         .gallery {
