--- a/608/index.html
+++ b/608/index.html
@@ -12,16 +12,15 @@
             text-align: center;
         }
 
-        /* 主要容器（6×6 排列） */
+        /* 主要容器（排版根據螢幕大小變動） */
         .container {
             display: grid;
-            grid-template-columns: repeat(6, 1fr);
+            grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
             gap: 20px;
             justify-content: center;
             max-width: 1200px;
             margin: 50px auto;
-            }
-
+        }
 
         /* 個人卡片 */
         .person-card {
@@ -63,7 +62,13 @@
             font-weight: bold;
             white-space: nowrap;
         }
-
+        
+        /* 響應式設計，當螢幕小於600px時，每行顯示2個 */
+        @media (max-width: 600px) {
+            .container {
+                grid-template-columns: repeat(2, 1fr);
+            }
+        }
 
         /* 照片牆 */
         .gallery {
