--- a/608/index.html
+++ b/608/index.html
@@ -132,7 +132,11 @@
             top: 20px;
             left: 20px;
             background-color: rgba(0, 0, 0, 0.5);
-            padding: 10px;
+            width: 50px;  /* 設定固定寬度 */
+            height: 50px; /* 設定固定高度，確保是圓形 */
+            display: flex;
+            justify-content: center;
+            align-items: center;
             border-radius: 50%;
             cursor: pointer;
             transition: transform 0.2s;
@@ -150,12 +154,17 @@
         /* 關閉模態視窗的叉叉 */
         .close-button {
             position: absolute;
-            top: 10px;
-            right: 10px;
+            top: 20px;
+            right: 20px;
             background-color: rgba(0, 0, 0, 0.5);
-            padding: 10px;
+            width: 50px;  /* 固定寬度 */
+            height: 50px; /* 固定高度，確保是圓形 */
+            display: flex;
+            justify-content: center;
+            align-items: center;
             border-radius: 50%;
             cursor: pointer;
+            transition: transform 0.2s;
         }
 
         .close-button:hover {
