--- a/608/index.html
+++ b/608/index.html
@@ -41,46 +41,54 @@
             }
         }
         
-        /* 合照、老師們的大框框 */
-        .album-card {
-            width: 420px;
-            height: 200px;
+        /* 上方區域：合照 & 老師們 */
+        .top-section {
+            display: flex;
+            justify-content: center;
+            gap: 20px;
+            margin-bottom: 30px;
+        }
+
+        /* 框框樣式 */
+        .photo-box {
+            width: 250px;
+            height: 180px;
             background-color: white;
             border-radius: 10px;
             box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.2);
             text-align: center;
-            cursor: pointer;
-            transition: transform 0.2s;
             position: relative;
+            cursor: pointer;
             overflow: hidden;
+            transition: transform 0.3s;
         }
 
-        .album-card:hover {
-            transform: scale(1.05);
-        }
-
-        .album-image {
+        /* 照片樣式 */
+        .photo-thumbnail {
             width: 100%;
-            height: 100%;
+            height: 130px;
             object-fit: cover;
-            filter: brightness(0.8);
-            transition: filter 0.3s;
         }
 
-        .album-card:hover .album-image {
-            filter: brightness(1);
-        }
-
-        .album-info {
+        /* 底部標籤 */
+        .photo-label {
             position: absolute;
             bottom: 10px;
             left: 50%;
             transform: translateX(-50%);
-            font-size: 30px;
+            font-size: 20px;
             font-weight: bold;
+            background: rgba(0, 0, 0, 0.7);
             color: white;
-            text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.7);
+            padding: 5px 10px;
+            border-radius: 5px;
         }
+
+    /* 滑鼠懸停時放大 */
+        .photo-box:hover {
+            transform: scale(1.05);
+        }
+
 
         /* 個人卡片 */
         .person-card {
@@ -218,12 +226,12 @@
     
     <div class="container" id="personContainer">
         <!-- 合照和老師們 -->
-        <div class="album-card" onclick="openAlbum('合照的雲端硬碟資料夾ID')">
+        <div class="album-card" onclick="openAlbum('1ljcfzuHufDKM4PcnhENRbbW86q8WQOhA')">
             <img class="album-image" src="https://drive.google.com/thumbnail?id=1i2tsdJEqIyQfIX7uT55qYD5fPNydmic1&sz=w200" alt="合照">
             <div class="album-info">合照</div>
         </div>
 
-        <div class="album-card" onclick="openAlbum('老師們的雲端硬碟資料夾ID')">
+        <div class="album-card" onclick="openAlbum('1Uk-Cytv_qjelZSzg9UajylDj6ZJIpPRc')">
             <img class="album-image" src="https://drive.google.com/thumbnail?id=1ycNs-shE-51_Ev3N8XuGjf0q_lp6Ab2C&sz=w200" alt="老師們">
             <div class="album-info">老師們</div>
         </div>
@@ -315,6 +323,15 @@
 
     <script>
         const API_KEY = "AIzaSyD3Q3lspfglPiRXPd1ksROciLdYLD84-y0"; // 你的 API Key
+
+        function openAlbum(type) {
+            if (type === "group") {
+                window.location.href = "group_photos.html"; // 連到合照頁面
+            } else if (type === "teachers") {
+                window.location.href = "teachers_photos.html"; // 連到老師們的頁面
+            }
+        }
+
 
         function openAlbum(folderId) {
             // 隱藏原本的個人卡片區域
