--- a/608/index.html
+++ b/608/index.html
@@ -70,10 +70,15 @@
             text-align: center;
             font-size: 24px;
             font-weight: bold;
-            color: white;
-            background: rgba(0, 0, 0, 0.5);
+            color: white; /* 文字顏色白色 */
+            text-shadow: 
+                -2px -2px 0 black,  
+                2px -2px 0 black,  
+                -2px 2px 0 black,  
+                2px 2px 0 black; /* 文字四周加黑邊 */
             padding: 10px 0;
         }
+
 
 
 
