--- a/608/index.html
+++ b/608/index.html
@@ -68,16 +68,18 @@
             bottom: 0;
             width: 100%;
             text-align: center;
-            font-size: 24px;
+            font-size: 25px; /* 字體大小 25px */
             font-weight: bold;
             color: white; /* 文字顏色白色 */
+            letter-spacing: 3px; /* 字母間距增加（可調整） */
             text-shadow: 
                 -2px -2px 0 black,  
                 2px -2px 0 black,  
                 -2px 2px 0 black,  
-                2px 2px 0 black; /* 文字四周加黑邊 */
+                2px 2px 0 black; /* 黑色文字描邊 */
             padding: 10px 0;
         }
+
 
 
 
