--- a/608/index.html
+++ b/608/index.html
@@ -119,7 +119,7 @@
             border-radius: 50%;
             object-fit: cover;
             object-position: top; /* 調整圖片對齊到上方 */
-            transform: scale(1.2); /* 放大 1.2 倍（數值可依效果調整） */
+            transform: scale(2); /* （數值可依效果調整） */
             position: absolute;
             top: 20px; /* 可調整，讓頭部位置更自然 */
             left: 50%;
