--- a/608/index.html
+++ b/608/index.html
@@ -122,7 +122,7 @@
             position: absolute;
             top: 20px; /* 可調整，讓頭部位置更自然 */
             left: 50%;
-            transform: translateX(-50%) scale(1.5); /* 同時水平置中和放大 */
+            transform: translateX(-50%); /* 同時水平置中和放大 */
         }
 
         /* 座號與姓名 */
