--- a/608/index.html
+++ b/608/index.html
@@ -119,11 +119,10 @@
             border-radius: 50%;
             object-fit: cover;
             object-position: top; /* 調整圖片對齊到上方 */
-            transform: scale(1.2); /* 放大 1.2 倍（數值可依效果調整） */
             position: absolute;
             top: 20px; /* 可調整，讓頭部位置更自然 */
             left: 50%;
-            transform: translateX(-50%) scale(1.2); /* 同時水平置中和放大 */
+            transform: translateX(-50%); /* 同時水平置中和放大 */
         }
 
 
@@ -273,7 +272,7 @@
         </div>
 
         <div class="person-card" onclick="openAlbum('1ljcfzuHufDKM4PcnhENRbbW86q8WQOhA')">
-            <img class="avatar" src="https://drive.google.com/thumbnail?id=1i2tsdJEqIyQfIX7uT55qYD5fPNydmic1&sz=w200" alt="學生04">
+            <img class="avatar" src="https://drive.google.com/thumbnail?id=1i2tsdJEqIyQfIX7uT55qYD5fPNydmic1&sz=w200" alt="學生01" style="transform: scale(1.5); object-position: top; object-fit: cover;">
             <div class="info">04 張偉</div>
         </div>
 
